[package]
name = "goldrush-sdk"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Rust SDK for GoldRush blockchain data APIs"
repository = "https://github.com/covalenthq/goldrush-sdk-rs" # placeholder
authors = ["Covalent <support@covalenthq.com>"]
readme = "README.md"
keywords = ["blockchain", "web3", "api", "covalent", "goldrush"]
categories = ["api-bindings", "web-programming", "cryptography::cryptocurrencies"]
rust-version = "1.70"

[dependencies]
reqwest = { version = "0.11", features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"], optional = true }
tracing = "0.1"
tracing-futures = "0.2"
uuid = { version = "1.0", features = ["v4"] }
moka = { version = "0.12", features = ["future"], optional = true }
backoff = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = ["tokio-runtime"]
tokio-runtime = ["tokio"]
caching = ["moka"]
full = ["tokio-runtime", "caching"]

[[example]]
name = "balances"
required-features = ["tokio-runtime"]

[[example]]
name = "transactions"
required-features = ["tokio-runtime"]

[[bench]]
name = "sdk_benchmarks"
harness = false